🐛 nu borde bilder funka

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="bar">
-        <img class="logo" src="img/dd75d34.jpg" alt="This logo?">
+        <img class="logo" src="docs/img/dd75d34.jpg" alt="This logo?">
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Kontakta Företag</a></li>
@@ -25,7 +25,7 @@
     </header>
     <header class="img_center">
         <div class="img_relativ">
-            <img class="img_size" src="img/pexel.jpg" alt="höst_skog">
+            <img class="img_size" src="docs/img/pexel.jpg" alt="höst_skog">
             <div class="img_text_h1">
                 <h1>
                 Välkommen till Bildterapihuset
