💄 har ändra font, fixa knapparna, ändra margin

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             </ul>
         </nav>
-        <a href="#"><button>Boka Tid</button></a>
+        <button href="#">Boka Tid</button>
 
 
     </header>
@@ -31,10 +31,11 @@
                 Välkommen till Bildterapihuset
                 </h1>
                 <p class="img_text_p">
-                Morsan din kommer vara glad att du 
-                söker hjälp 
+                Använd din kreativa sida föra att hjäpa ditt live 
                 </p>
-                <a class="img_butten" href="#"><button class="img_butten_text">Boka Tid</button></a>
+                    <div class="img_butten">
+                        <button class="img_butten_text" href="#">Boka Tid</button>
+                    </div>
             </div>
         </div>
     </header>
