--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>test site</title>
+    <title>TEST</title>
     <link rel="stylesheet" href="text.css">
 </head>
 <body>
@@ -16,13 +16,15 @@
                 <li><a href="#">Support Medel</a></li>
                 <li><a href="#">Vad Är Bildterapi</a></li>
                 <li><a href="#">Om Oss</a></li>
+
             </ul>
         </nav>
-        <a href="#"><button>Boka Tid</button></a>
+        <button href="#">Boka Tid</button>
 
 
     </header>
-    <header class="img_center">
+    
+    <section class="img_center">
         <div class="img_relativ">
             <img class="img_size" src="img_test/pexel.jpg" alt="höst_skog">
             <div class="img_text_h1">
@@ -30,16 +32,17 @@
                 Välkommen till Bildterapihuset
                 </h1>
                 <p class="img_text_p">
-                Morsan din kommer vara glad att du 
-                söker hjälp 
+                Använd din kreativa sida föra att hjäpa ditt live
                 </p>
-                <a class="img_butten" href="#"><button class="img_butten_text">Boka Tid</button></a>
+                    <div class="img_butten">
+                        <button class="img_butten_text" href="#">Boka Tid</button>
+                    </div>
             </div>
         </div>
-    </header>
+    </section>
 
 
-    <header class="margin_box">
+    <section class="margin_box">
         <div class="yellow_box">
             <h2>VAD ÄR BILDTERAPI</h2>
             <p class="yellow_box_p">
@@ -50,10 +53,10 @@
             </p>
             
         </div>
-    </header>
+    </section>
 
 
-    <header class="margin_box">
+    <section class="margin_box">
         <div class="yellow_box">
             <h2>OM OSS</h2>
             <p class="yellow_box_p">
@@ -62,10 +65,10 @@
                 för bildterapeuter (SRBt), följer deras Etiska riktlinjer och erhåller handledning på vårt arbete.
             </p>
             </div>
-    </header>
+    </section>
 
 
-    <header class="address">
+    <section class="address">
         <div class="address_text">
             <h1>Adress</h1>
             <h3 class="address_h3">Ostgatan 2,</h3>
@@ -75,7 +78,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16741.654886775104!2d20.236435568712682!3d63.828460836163416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c5b730f9a2629%3A0x2dd69627028dee38!2sBrogatan%205%2C%20903%2021%20Ume%C3%A5!5e0!3m2!1ssv!2sse!4v1645089784283!5m2!1ssv!2sse" 
             loading="lazy">
         </iframe>
-    </header>
+    </section>
 
 
     <footer>
